<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/txt_city_name"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_weather"
                android:src="@mipmap/ic_launcher"
                android:layout_width="80dp"
                android:layout_height="80dp" />

            <TextView
                android:id="@+id/txt_temperature"
                android:textColor="@color/white"
                android:layout_marginLeft="8dp"
                android:textSize="50sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/updated_by_local_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_date_time"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="09:00   06/05/2021"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TableLayout
            android:background="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:stretchColumns="*"
            android:padding="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/img_temperature"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_thermometer" />
                <TextView
                    android:text="@string/temperature"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="left"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_column="1"
                    android:textSize="18sp"
                    android:id="@+id/txt_maxmintemperature"
                    android:text="22°C - 28°C"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:id="@+id/img_feelslike"
                    android:src="@drawable/ic_feelslike"
                    android:layout_gravity="left"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:text="@string/feels_like"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="left"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:id="@+id/txt_feelslike"
                    android:text="25°C"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:id="@+id/img_wind"
                    android:src="@drawable/ic_wind"
                    android:layout_gravity="left"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:text="@string/wind"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    />
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:id="@+id/txt_speed"
                    android:text="Speed: 1.29 Deg: 65"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent" />

            </TableRow>


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >

                <ImageView
                    android:id="@+id/img_humidity"
                    android:src="@drawable/ic_humidity"
                    android:layout_gravity="left"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    />
                <TextView
                    android:text="@string/humidity"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:layout_gravity="left"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>
                <TextView
                    android:layout_column="1"
                    android:textColor="@color/white"
                    android:id="@+id/txt_humidity"
                    android:text="86%"
                    android:textSize="20sp"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>